kubernetes/apps/esphome/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: esphome
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 6052
  selector:
    app: esphome
