kubernetes/apps/esphome/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: esphome-ingress
  namespace: esphome
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`esphome.sobrinho.pt`)
      kind: Rule
      services:
        - name: esphome
          port: main
  tls:
    secretName: esphome-cert
